--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-  "homepage":"https://haydenlee666.github.io/Weather_App/",
+  "homepage":"http://haydenlee666.github.io/Weather_App",
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
