--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 { 
-  "homepage":"https://haydenlee666.github.io/Weather_App",
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "13.12.0",
+    "npm":"6.14.4"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
